welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: not found: value Direction
		if (getDirection() == Direction.EST) {
                                      ^ZigZag:26: error: not found: value inverse
			inverse()
                        ^ZigZag:41: error: not found: value inverse
			inverse()
                        ^